<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="language_category"
        app:title="@string/language">

        <DropDownPreference
            app:key="language"
            app:title="@string/choose_language"
            app:useSimpleSummaryProvider="true"
            app:entries="@array/languages"
            app:entryValues="@array/languages_values"
            app:defaultValue="@string/default_language"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:key="location_category"
        app:title="@string/location">

        <SwitchPreferenceCompat
            app:key="location"
            app:title="@string/enable_auto_location"
            app:defaultValue="true"/>

        <ListPreference
            app:key="campus"
            app:title="@string/choose_campus"
            app:defaultValue="@string/default_campus"
            app:entries="@array/locations"
            app:entryValues="@array/locations"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:key="user_category"
        app:title="@string/status">

        <ListPreference
            app:key="status"
            app:title="@string/choose_status"
            app:defaultValue="@string/default_status"
            app:entries="@array/status"
            app:entryValues="@array/status_values">
        </ListPreference>
    </PreferenceCategory>

    <PreferenceCategory
        app:key="dietary_category"
        app:title="@string/dietary_preferences">

        <MultiSelectListPreference
            app:key="dietaryPreferenceList"
            app:title="@string/choose_dietary_preferences"
            app:defaultValue="@array/dietary_preferences_values"
            app:entries="@array/dietary_preferences"
            app:entryValues="@array/dietary_preferences_values">
        </MultiSelectListPreference>
    </PreferenceCategory>

    <PreferenceCategory
        app:key="help_category"
        app:title="@string/help">

        <Preference
            app:key="feedback"
            app:title="@string/send_feedback"
            app:summary="@string/report_issues"/>
    </PreferenceCategory>

</PreferenceScreen>